# ForexPred

./: .env  Cargo.toml  diesel.toml  docker-compose.yml
ForexPred/: Cargo.toml  readme.md
ForexPred/src/: main.rs
ForexPred/src/shared/: mod.rs
ForexPred/src/shared/aggregate/: aggregate_root.rs
ForexPred/src/shared/event/: event_dispatcher.rs  event_root.rs  mod.rs
ForexPred/src/shared/logger/: logger_root.rs  mod.rs
Scrapper/: Cargo.toml
Scrapper/migrations/: 20231209112410_create_currencies_table.up.sql  20231210152446_create_currency_rates_table.up.sql
Scrapper/src/: main.rs
migrations/2023-11-03-205314_create_currencies/: up.sql
migrations/2023-11-03-205456_create_currency_rates/: down.sql  up.sql
src/: main.rs
src/currency/application/: mod.rs
src/currency/application/event/: create_currency_event.rs
src/currency/application/service/: currency_service.rs
src/currency/application/validator/: create_currency_validator.rs  mod.rs
src/currency/domain/entity/: currency.rs
src/domains/: mod.rs
src/domains/currency_rate/models/: currency.rs  mod.rs  (+1 more)
src/domains/data/: config.rs  exchange_rate.rs  mod.rs
src/models/: users.rs
src/repository/: base.rs  currency_rate_repository.rs  currency_repository.rs  example_repository.rs  mod.rs  schema.rs
src/scheduler/: mod.rs
src/scheduler/jobs/: base.rs  create_user_job.rs  mod.rs  print_index_job.rs
src/shared/: mod.rs
src/shared/aggregate/: mod.rs
src/shared/event/: event_dispatcher.rs  event_root.rs  mod.rs
src/shared/infrastructure/: mod.rs
src/shared/scheduler/: scheduler.rs
(+26 files in other folders)
