[package]
name = "forex_pred"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4" }
actix-rt = "2.7.0"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.0", features = ["mysql", "r2d2", "chrono", "uuid"] }
dotenv = "0.15.0"
dotenvy = "0.15"
serde = { version = "1.0.189", features = ["derive"] }
uuid = { version = "1.5.0", features = ["v4"] }
tokio_schedule = { version = "0.3.1" }
env_logger = "0.10.0"
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"  
once_cell = "1.8.0"
futures = "0.3.29"