[package]
name = "scrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = "1.0.8"
reqwest = {version = "0.11.18", features = ["blocking"]}
scraper = "0.18"
sqlx = { version = "0.7", features = [ "tls-rustls", "mysql", "runtime-async-std"] }
async-std = { version = "1.12.0", features = ["attributes"] }
uuid = { version = "1.6", features = ["serde", "v4"] }